# dros_website

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  in.html  ps.txt  pyproject.toml  requirements.txt  wsi.py
.github/workflows/: django.yml
data/db/global/: 1260  1262  2671  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_13756.stat  global.stat
website/: db.sqlite3  requirements.txt
website/accounts/: forms.py  signals.py
website/accounts/migrations/: 0002_alter_user_id.py  0003_user_username.py
website/accounts/models/: user.py
website/accounts/views/: signup.py
website/calendarapp/: urls.py  utils.py
website/calendarapp/migrations/: 0003_alter_event_id_alter_eventmember_id.py
website/calendarapp/models/: event.py
website/calendarapp/views/: __init__.py  event_list.py  other_views.py
website/core/: settings.py
website/myproject/: settings.py  urls.py  views.py
website/newsletter/: admin.py  apps.py  forms.py  models.py  sitemessages.py  urls.py  views.py
website/newsletter/migrations/: 0001_initial.py  0002_qrcode.py  0003_alter_qrcode_qr_code.py  0004_alter_qrcode_options_qrcode_verfication_code_and_more.py  0005_alter_qrcode_verfication_code.py  0006_qrcode_image.py  0007_qrcode_attend.py
website/onlinecourse/: admin.py  models.py  signals.py  urls.py  views.py
website/onlinecourse/migrations/: 0001_initial.py  0004_learner_can_join_only.py  (+9 more)
website/templates/: 404.html  add_member.html  base.html  calendar.html  event-details.html  event.html  event_delete.html  qr_code.html
website/users/: models.py
(+109 files in other folders)
