[tool.poetry]
name = "dros_website"
version = "0.1.0"
description = ""
authors = ["aboelezz <mahmoudaboelezz51@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1"
asgiref = "3.5.2"
astroid = "2.11.7"
black = "22.6.0"
click = "8.1.3"
colorama = "0.4.5"
dill = "0.3.5.1"
isort = "5.10.1"
lazy-object-proxy = "1.7.1"
mccabe = "0.7.0"
mypy-extensions = "0.4.3"
pathspec = "0.9.0"
pip = "22.2.2"
platformdirs = "2.5.2"
psycopg2 = "2.9.3"
pylint = "2.14.5"
python-dotenv = "0.20.0"
setuptools = "63.2.0"
sqlparse = "0.4.2"
tomli = "2.0.1"
tomlkit = "0.11.4"
tzdata = "2022.2"
wrapt = "1.14.1"
Pillow = "^9.2.0"
django-jet = "^1.0.8"
google-api-python-client = "1.4.1"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
